Iniciando la revisión

--- a/Source/Journals/PaperTesis/CassettiFreryR0.tex
+++ b/Source/Journals/PaperTesis/CassettiFreryR0.tex
@@ -63,11 +63,10 @@
 		\email{julia.cassetti@gmail.com}           %  \\
 		%             \emph{Present address:} of F. Author  %  if needed
 		\and
-		Alejandro C. Frery\at
-		Laborat\'orio de Computa\c c\~ao Cient\'ifica e An\'alise Num\'erica (LaCCAN), Universidade Federal de Alagoas, and the Key Lab of Intelligent Perception and Image Understanding of the Ministry of Education, Xidian University, Xi'an, China\\
-		Av. Lourival Melo Mota, s/n, 57072-900 Macei\'o -- AL, Brazil\\
-		Tel.: (55 82) 3214-1401
-		\email{acfrery@laccan.ufal.br}
+		Alejandro C.\ Frery\at
+		School of Mathematics and Statistics, Victoria University of Wellington\\
+		PO Box 600, Wellington 6140 New Zealand\\
+		\email{alejandro.frery@vuw.ac.nz}
 	}
 	
 	\date{Received: 29 May 2020 / Accepted: date}
@@ -812,7 +811,7 @@
 		%\begin{tabular}{c 5*(c c c c c)}
 		\begin{tabular}{c c S[table-number-alignment = right] S[table-number-alignment = right] S[table-number-alignment = right] S[table-number-alignment = right]}
 			\toprule
-			Color & $n$ &  $\widehat\alpha_{\text{\tiny{MV}}}$ & $\widehat{\alpha_{\Gamma}}$ &$\widehat\alpha_{\text{{LN}}}$  &$\widehat\alpha_{\text{{LC}}}$ \\
+			Color & $n$ &  ${\widehat\alpha}_{\text{MV}}$ & ${\widehat{\alpha}_{\Gamma}}$ &${\widehat\alpha}_{\text{{LN}}}$  &${\widehat\alpha}_{\text{{LC}}}$ \\
 			\cmidrule(lr){1-6}
 			Magenta     & 9   & -20.00   & -20.00  & -20.00   & -20.00    \\
 			Green       & 30  & -13.04  & -6.82  & -7.76     &  -20.00  \\
