--- a/Source/Journals/PaperTesis/CassettiFreryR1.tex
+++ b/Source/Journals/PaperTesis/CassettiFreryR1.tex
@@ -157,7 +157,7 @@
 	These estimators vary their shape according to the observation. This feature allows obtaining different degrees of smoothing~\cite{Scaillet2004}, and, as they do not assign weight outside the density function support, they are free of boundary bias~\cite{chensx2000}.
 	
 	In the last decade, concepts related to information theory have gained interest in image processing. 
-	In particular, several measures have been proposed to reflect the closeness between the models that describe samples. 
+	In particular, several measures have been proposed to reflect the closeness among the models that describe samples. 
 	Especially the concept of stochastic divergence has found applications in areas as diverse as signal and image processing~\cite{Aviyente2007}, automatic region detection in SAR imagery~\cite{SilvaCribariFrery:ImprovedLikelihood:Environmetrics,Nascimento2009}, 
 	speckle filters~\cite{Penna2019}, as contrast measures. 
 	Unsupervised classification strategies were applied to Polarimetric Synthetic Aperture Radar (PolSAR) images in~\cite{Carvalho2019}.
