--- a/Source/Journals/PaperTesis/Revision Files/Rev01/Responses.tex
+++ b/Source/Journals/PaperTesis/Revision Files/Rev01/Responses.tex
@@ -39,7 +39,7 @@ We agree with the suggestions, and we have proceeded accordingly.
 \item We added ``and $\Omega$ is the parameter space.'' to the sentence after~(1).
 \item We changed the text as follows
 		\begin{quote}
-	In particular, several measures have been proposed to reflect the closeness between \DIFdelbegin \DIFdel{two distribution functions.} \DIFdelend \DIFaddbegin \DIFadd{the models that describe samples.}\DIFaddend
+	In particular, several measures have been proposed to reflect the closeness  \DIFdelbegin \DIFdel{between two distribution functions.} \DIFdelend \DIFaddbegin \DIFadd{among the models that describe samples.}\DIFaddend
 		\end{quote}
 \item It was wrong; we corrected it and now it reads ``$\alpha \in (-1,-3)$''.
 \item 
